--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,3 +1,8 @@
-
-
-
+.logo-container {
+	background-color: blue;
+	height: 200px;
+}
+.tagline-container {
+	background-color: yellow;
+	height: 200px;
+}
