--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -7,8 +7,26 @@
 	height: 200px;
 }
 .why-image {
-	padding: 20px;
+	padding: 20px 0px;
+	width: 100%;
+	height:100%;
+	max-height: 100%;
+	max-width: 100%;
 }
 .why-text {
-	padding: 20px;
+	padding: 20px 0px;
+	width: 100%;
+	height:100%;
+	max-height: 100%;
+	max-width: 100%;
+}
+.who-image {
+	padding: 20px 0px;
+	width: 100%;
+	height:100%;
+	max-height: 100%;
+	max-width: 100%;
+}
+.who-text {
+	padding: 20px 0px;
 }
