--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,3 +1,16 @@
+/* foundation overides */
+p {
+	margin: 0;
+	padding: 0;
+}
+
+/* base styles */
+body {
+	padding-bottom: 30px;
+}
+
+
+/* website styles */
 .logo-container {
 	background-color: blue;
 	height: 200px;
@@ -6,27 +19,13 @@
 	background-color: yellow;
 	height: 200px;
 }
-.why-image {
-	padding: 20px 0px;
+.full-styling {
 	width: 100%;
 	height:100%;
-	max-height: 100%;
-	max-width: 100%;
 }
-.why-text {
+.vert-pad {
 	padding: 20px 0px;
+}
+.full-width {
 	width: 100%;
-	height:100%;
-	max-height: 100%;
-	max-width: 100%;
-}
-.who-image {
-	padding: 20px 0px;
-	width: 100%;
-	height:100%;
-	max-height: 100%;
-	max-width: 100%;
-}
-.who-text {
-	padding: 20px 0px;
 }
