--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -15,8 +15,10 @@ body {
 p {
 	margin: 0;
 	padding: 0;
-	font-size: 16px;
+	font-size: 13px;
+	line-height: 21px;
 }
+
 a {
 	color: #fff;
 }
@@ -34,18 +36,18 @@ a {
 }
 
 .pad {
-	padding-top: 15px
+	padding-top: 10px
 }
 
 .long-text {
-	font: 14px/21px Georgia, "Times New Roman", Times, serif;
+	font: 13px/21px Georgia, "Times New Roman", Times, serif;
 	color:#4D4D4D;
 }
 
 .home-text {
 	display: inline-block;
 	font: 13px Georgia, "Times New Roman", Times, serif;
-	color: #555;
+	color: #4D4D4D;
 	line-height: 21px;
 }
 
@@ -54,8 +56,23 @@ a {
 	letter-spacing: -1px;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: bold;
-	line-height: 90%;
-	
+}
+
+.name {font-size: 15px; 
+	letter-spacing:-.5;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	line-height: 95%;
+	color:#333333;
+}
+.orbit-wrapper{
+	width: 100%;
+	height: 100%;
+}
+
+#featured {
+	height: 350px;
+	width: 700px;
 }
 
 /* utility styles */
