--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -2,7 +2,7 @@
 body {
 	padding-bottom: 30px;
 	background: url(../images/backgrounds/dark_geometric.png) repeat;
-	color: #fff;
+	color: #282828;;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .half {
@@ -41,21 +41,23 @@ a {
 
 .long-text {
 	font: 13px/21px Georgia, "Times New Roman", Times, serif;
-	color:#4D4D4D;
+	color: #282828;
 }
 
 .home-text {
 	display: inline-block;
 	font: 13px Georgia, "Times New Roman", Times, serif;
-	color: #4D4D4D;
 	line-height: 21px;
+	color: #282828;
 }
 
 .title { 
-	font-size: 24px; 
+	font-size: 32px;
+	line-height: 32px; 
 	letter-spacing: -1px;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: bold;
+	margin-bottom: 20px;
 }
 
 .name {font-size: 15px; 
@@ -63,17 +65,14 @@ a {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: bold;
 	line-height: 95%;
-	color:#333333;
+	color: #333333;
 }
 .orbit-wrapper{
 	width: 100%;
 	height: 100%;
 }
 
-#featured {
-	height: 350px;
-	width: 700px;
-}
+
 
 /* utility styles */
 .vert-pad {
@@ -92,6 +91,14 @@ a {
 .row {
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+.submit {
+	float:right;
+	font-size: 18px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	line-height: 95%;
 }
 
 /* website styles */
@@ -196,6 +203,14 @@ a {
 	height: 425px;
 	width: 700px;
 	background-color: transparent;
+}
+
+.orbit-wrapper #featured-images img {
+	height: 450px;
+	width: 700px;
+}
+.orbit-wrapper .timer {
+	display: none;
 }
 
 
