--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -14,9 +14,9 @@ body {
 .submit-now {
 	color:#000;
 	font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: bold;
-	padding: 10px 0px;
+	padding: 15px 0px;
 }
 
 p {
@@ -79,6 +79,9 @@ a {
 	height: 100%;
 }
 
+ol {
+	margin-bottom: 10px;
+}
 
 
 /* utility styles */
